--- a/main.html
+++ b/main.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js"></script>
-    <header></header>
-    <main class="Accio" id="Job">
-      <p class="hello-accio-job">Hello Accio Job</p>
-    </main>
-    <footer></footer>
-  </body>
+<head>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- the entire body must be written by student -->
+  <script type="text/javascript" src="./script.js"></script>
+  <header></header>
+  <main class="Accio" id="Job">
+    <p class="hello-accio">Hello Accio Job</p>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
